--- a/build.gradle
+++ b/build.gradle
@@ -4,5 +4,5 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
-    id 'kotlinx-serialization' version '1.3.20' apply true
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
